# kemar-control

./: .gitignore  Install_Kemar_head_control.txt  LICENSE  README.md  kemar.gen  kemar.idl
codels/: includes.h  includes.h~  kemar_codels.c  kemar_motion_codels.c  kemar_state_codels.c
elmo-axis-libs/: .gitignore  Makefile.am  README  configure.ac  elmo-axis-libs.pc.in
elmo-axis-libs/elmo-axis/: harmonica.h  kemar.h  socketcan.h
elmo-axis-libs/src/: Makefile.am  driveParam.c  harmonica.c  kemar.c  socketcan.c  timeutils.c  timeutils.h
elmo-axis-libs/test/: Makefile.am  axisTest.c  kemarTest.c
